--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-style: normal;
+  color: white;
 }
 
 .App-logo {
@@ -68,4 +69,11 @@ form input {
   border-radius: 7px;
   font-size: medium;
   color: #3c6c8e;
+}
+
+.footer {
+  min-height: 50vh;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 1vmin);
 }
