--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,11 @@ form input {
   justify-content: center;
   font-size: calc(10px + 1vmin);
 }
+a {
+  text-decoration: underline;
+  color: #000;
+}
+a:hover {
+  color: #8e82e0;
+  text-decoration: none;
+}
