--- a/src/App.css
+++ b/src/App.css
@@ -1,87 +1,16 @@
 .App {
+  max-width: 800px;
+  margin: 60px auto;
+}
+p {
+  margin-top: 30px;
   text-align: center;
-  font-style: normal;
-  color: white;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #323b4d;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.Forecast {
-  ul {
-    margin: 0;
-    padding: 0;
-  }
-  li {
-    text-align: center;
-    list-style: none;
-    margin: 0;
-    padding-top: 5.5px;
-    color: #fff;
-    font-size: medium;
-    font-weight: bold;
-  }
-  li:first-letter {
-    text-transform: capitalize;
-  }
-}
-
-form input {
-  padding: 15px 30px;
-  margin: 10px;
-  border-radius: 7px;
-  font-size: medium;
-  color: #3c6c8e;
-}
-
-.footer {
-  min-height: 50vh;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 1vmin);
-}
-a {
-  text-decoration: underline;
-  color: #fff;
-}
-a:hover {
-  color: #170e53;
+  font-size: 14px;
   text-decoration: none;
+  font-weight: bold;
+}
+.App p a {
+  text-decoration: none;
+  font-weight: bold;
+  color: rgba(57, 57, 149, 0.853);
 }
