make css responsive to all device

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,22 +30,23 @@
   margin-top: 3s;
 }
 
-.Weather .form-control {
+.Weather .form-search-bar {
   background: #f9f7fe;
-  border: none;
+  border: 1px solid rgb(235, 220, 220);
   padding: 10px 20px;
   display: inline-block;
   border-radius: 6px;
-  color: rgba(39, 33, 66, 0.4);
+  color: rgb(35, 34, 38);
   font-size: 16px;
   width: 100%;
 }
-.Weather .btn {
-  padding: 10px 55px;
-  display: inline-block;
+.Weather .search-button {
+  padding: 10px 15px;
+  text-align: center;
   width: 100%;
-  border: none;
-  color: rgba(39, 33, 66, 0.4);
+  border: 1px solid rgb(235, 220, 220);
+  border-radius: 6px;
+  color: rgb(235, 220, 220);
 }
 
 .Weather .temperature {
@@ -63,4 +64,27 @@
   font-weight: 400;
   position: relative;
   line-height: 1.5;
+}
+
+@media (max-width: 767px) {
+  .Weather {
+    text-align: center;
+  }
+  .Weather h1 {
+    font-size: 40px;
+  }
+  .Weather li {
+    display: inline-block;
+    margin: 10px;
+  }
+  .Weather .units {
+    font-size: 19px;
+    position: relative;
+    top: -30px;
+  }
+
+  .Weather .btn {
+    display: inline;
+    width: 100%;
+  }
 }
