--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,19 @@
   max-width: 800px;
   margin: 60px auto;
 }
-p {
-  margin-top: 30px;
+.footer {
   text-align: center;
   font-size: 14px;
   text-decoration: none;
   font-weight: bold;
 }
 .App p a {
-  text-decoration: none;
+  text-decoration: underline;
   font-weight: bold;
   color: rgba(57, 57, 149, 0.853);
+}
+.App p a:hover {
+  text-decoration: none;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
 }
