--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,10 +1,9 @@
 .WeatherInfo {
-  margin-top: 20px;
+  margin-bottom: 15px;
   color: rgb(235, 220, 220);
 }
 
 .WeatherInfo .temperature-container {
-  margin-left: 55px;
   align-items: center;
   padding: 0 px;
   margin: 0 px;
